[project]

name = "Neurogister"
description = """
Neurogister is a DVC driven data registry for neuroimaging. It provides 
datasets for processes validation and benchmarking, educational purposes,
and more.
"""

readme = "README.md"
license = "MIT"

authors = [
    { name = "AlexVCaron", email = "alex.valcourt.caron@usherbrooke.ca" }
]
maintainers = [
    { name = "AlexVCaron", email = "alex.valcourt.caron@usherbrooke.ca" }
]

requires-python = ">=3.10"
dependencies = [
    "dvc~=3.41",
    "requests~=2.31"
]

dynamic = ["version"]

[project.scripts]
neuro_create_package = "neurogister.cli:create_package:main"
neuro_port_legacy_scilpy = "neurogister.cli:port_legacy_scilpy:main"

[tool.hatch.version]
path = "neurogister/__init__.py"

[project.optional-dependencies]
admin = [
    "dvc[ssh]~=3.41"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
